parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    STRING
    WHERE

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> create_statement SEMI
Rule 5     statement -> select_statement SEMI
Rule 6     create_statement -> CREATE TABLE ID LPAREN column_definitions RPAREN
Rule 7     column_definitions -> column_definition
Rule 8     column_definitions -> column_definitions COMMA column_definition
Rule 9     column_definition -> ID data_type
Rule 10    data_type -> INT
Rule 11    data_type -> CHAR
Rule 12    data_type -> DECIMAL
Rule 13    select_statement -> SELECT select_list FROM ID
Rule 14    select_statement -> SELECT select_list FROM ID HAVING condition
Rule 15    select_list -> ID
Rule 16    select_list -> function
Rule 17    select_list -> select_list COMMA ID
Rule 18    select_list -> select_list COMMA function
Rule 19    function -> SUM LPAREN ID RPAREN
Rule 20    function -> COUNT LPAREN ID RPAREN
Rule 21    function -> MIN LPAREN ID RPAREN
Rule 22    condition -> condition_term
Rule 23    condition -> condition OR condition_term
Rule 24    condition_term -> condition_factor
Rule 25    condition_term -> condition_term AND condition_factor
Rule 26    condition_factor -> expression EQ expression
Rule 27    condition_factor -> expression LT expression
Rule 28    condition_factor -> expression LE expression
Rule 29    condition_factor -> expression GT expression
Rule 30    condition_factor -> expression GE expression
Rule 31    condition_factor -> expression NE expression
Rule 32    expression -> term
Rule 33    expression -> expression PLUS term
Rule 34    expression -> expression MINUS term
Rule 35    term -> factor
Rule 36    term -> term TIMES factor
Rule 37    term -> term DIVIDE factor
Rule 38    factor -> ID
Rule 39    factor -> NUMBER
Rule 40    factor -> function
Rule 41    factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

AND                  : 25
CHAR                 : 11
COMMA                : 8 17 18
COUNT                : 20
CREATE               : 6
DECIMAL              : 12
DIVIDE               : 37
EQ                   : 26
FROM                 : 13 14
GE                   : 30
GT                   : 29
HAVING               : 14
ID                   : 6 9 13 14 15 17 19 20 21 38
INT                  : 10
LE                   : 28
LPAREN               : 6 19 20 21 41
LT                   : 27
MIN                  : 21
MINUS                : 34
NE                   : 31
NUMBER               : 39
OR                   : 23
PLUS                 : 33
RPAREN               : 6 19 20 21 41
SELECT               : 13 14
SEMI                 : 4 5
STRING               : 
SUM                  : 19
TABLE                : 6
TIMES                : 36
WHERE                : 
error                : 

Nonterminals, with rules where they appear

column_definition    : 7 8
column_definitions   : 6 8
condition            : 14 23
condition_factor     : 24 25
condition_term       : 22 23 25
create_statement     : 4
data_type            : 9
expression           : 26 26 27 27 28 28 29 29 30 30 31 31 33 34 41
factor               : 35 36 37
function             : 16 18 40
program              : 0
select_list          : 13 14 17 18
select_statement     : 5
statement            : 2 3
statements           : 1 3
term                 : 32 33 34 36 37

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . create_statement SEMI
    (5) statement -> . select_statement SEMI
    (6) create_statement -> . CREATE TABLE ID LPAREN column_definitions RPAREN
    (13) select_statement -> . SELECT select_list FROM ID
    (14) select_statement -> . SELECT select_list FROM ID HAVING condition

    CREATE          shift and go to state 6
    SELECT          shift and go to state 7

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    create_statement               shift and go to state 4
    select_statement               shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . create_statement SEMI
    (5) statement -> . select_statement SEMI
    (6) create_statement -> . CREATE TABLE ID LPAREN column_definitions RPAREN
    (13) select_statement -> . SELECT select_list FROM ID
    (14) select_statement -> . SELECT select_list FROM ID HAVING condition

    $end            reduce using rule 1 (program -> statements .)
    CREATE          shift and go to state 6
    SELECT          shift and go to state 7

    statement                      shift and go to state 8
    create_statement               shift and go to state 4
    select_statement               shift and go to state 5

state 3

    (2) statements -> statement .

    CREATE          reduce using rule 2 (statements -> statement .)
    SELECT          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> create_statement . SEMI

    SEMI            shift and go to state 9


state 5

    (5) statement -> select_statement . SEMI

    SEMI            shift and go to state 10


state 6

    (6) create_statement -> CREATE . TABLE ID LPAREN column_definitions RPAREN

    TABLE           shift and go to state 11


state 7

    (13) select_statement -> SELECT . select_list FROM ID
    (14) select_statement -> SELECT . select_list FROM ID HAVING condition
    (15) select_list -> . ID
    (16) select_list -> . function
    (17) select_list -> . select_list COMMA ID
    (18) select_list -> . select_list COMMA function
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 13
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    select_list                    shift and go to state 12
    function                       shift and go to state 14

state 8

    (3) statements -> statements statement .

    CREATE          reduce using rule 3 (statements -> statements statement .)
    SELECT          reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 9

    (4) statement -> create_statement SEMI .

    CREATE          reduce using rule 4 (statement -> create_statement SEMI .)
    SELECT          reduce using rule 4 (statement -> create_statement SEMI .)
    $end            reduce using rule 4 (statement -> create_statement SEMI .)


state 10

    (5) statement -> select_statement SEMI .

    CREATE          reduce using rule 5 (statement -> select_statement SEMI .)
    SELECT          reduce using rule 5 (statement -> select_statement SEMI .)
    $end            reduce using rule 5 (statement -> select_statement SEMI .)


state 11

    (6) create_statement -> CREATE TABLE . ID LPAREN column_definitions RPAREN

    ID              shift and go to state 18


state 12

    (13) select_statement -> SELECT select_list . FROM ID
    (14) select_statement -> SELECT select_list . FROM ID HAVING condition
    (17) select_list -> select_list . COMMA ID
    (18) select_list -> select_list . COMMA function

    FROM            shift and go to state 19
    COMMA           shift and go to state 20


state 13

    (15) select_list -> ID .

    FROM            reduce using rule 15 (select_list -> ID .)
    COMMA           reduce using rule 15 (select_list -> ID .)


state 14

    (16) select_list -> function .

    FROM            reduce using rule 16 (select_list -> function .)
    COMMA           reduce using rule 16 (select_list -> function .)


state 15

    (19) function -> SUM . LPAREN ID RPAREN

    LPAREN          shift and go to state 21


state 16

    (20) function -> COUNT . LPAREN ID RPAREN

    LPAREN          shift and go to state 22


state 17

    (21) function -> MIN . LPAREN ID RPAREN

    LPAREN          shift and go to state 23


state 18

    (6) create_statement -> CREATE TABLE ID . LPAREN column_definitions RPAREN

    LPAREN          shift and go to state 24


state 19

    (13) select_statement -> SELECT select_list FROM . ID
    (14) select_statement -> SELECT select_list FROM . ID HAVING condition

    ID              shift and go to state 25


state 20

    (17) select_list -> select_list COMMA . ID
    (18) select_list -> select_list COMMA . function
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 26
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    function                       shift and go to state 27

state 21

    (19) function -> SUM LPAREN . ID RPAREN

    ID              shift and go to state 28


state 22

    (20) function -> COUNT LPAREN . ID RPAREN

    ID              shift and go to state 29


state 23

    (21) function -> MIN LPAREN . ID RPAREN

    ID              shift and go to state 30


state 24

    (6) create_statement -> CREATE TABLE ID LPAREN . column_definitions RPAREN
    (7) column_definitions -> . column_definition
    (8) column_definitions -> . column_definitions COMMA column_definition
    (9) column_definition -> . ID data_type

    ID              shift and go to state 31

    column_definitions             shift and go to state 32
    column_definition              shift and go to state 33

state 25

    (13) select_statement -> SELECT select_list FROM ID .
    (14) select_statement -> SELECT select_list FROM ID . HAVING condition

    SEMI            reduce using rule 13 (select_statement -> SELECT select_list FROM ID .)
    HAVING          shift and go to state 34


state 26

    (17) select_list -> select_list COMMA ID .

    FROM            reduce using rule 17 (select_list -> select_list COMMA ID .)
    COMMA           reduce using rule 17 (select_list -> select_list COMMA ID .)


state 27

    (18) select_list -> select_list COMMA function .

    FROM            reduce using rule 18 (select_list -> select_list COMMA function .)
    COMMA           reduce using rule 18 (select_list -> select_list COMMA function .)


state 28

    (19) function -> SUM LPAREN ID . RPAREN

    RPAREN          shift and go to state 35


state 29

    (20) function -> COUNT LPAREN ID . RPAREN

    RPAREN          shift and go to state 36


state 30

    (21) function -> MIN LPAREN ID . RPAREN

    RPAREN          shift and go to state 37


state 31

    (9) column_definition -> ID . data_type
    (10) data_type -> . INT
    (11) data_type -> . CHAR
    (12) data_type -> . DECIMAL

    INT             shift and go to state 39
    CHAR            shift and go to state 40
    DECIMAL         shift and go to state 41

    data_type                      shift and go to state 38

state 32

    (6) create_statement -> CREATE TABLE ID LPAREN column_definitions . RPAREN
    (8) column_definitions -> column_definitions . COMMA column_definition

    RPAREN          shift and go to state 42
    COMMA           shift and go to state 43


state 33

    (7) column_definitions -> column_definition .

    RPAREN          reduce using rule 7 (column_definitions -> column_definition .)
    COMMA           reduce using rule 7 (column_definitions -> column_definition .)


state 34

    (14) select_statement -> SELECT select_list FROM ID HAVING . condition
    (22) condition -> . condition_term
    (23) condition -> . condition OR condition_term
    (24) condition_term -> . condition_factor
    (25) condition_term -> . condition_term AND condition_factor
    (26) condition_factor -> . expression EQ expression
    (27) condition_factor -> . expression LT expression
    (28) condition_factor -> . expression LE expression
    (29) condition_factor -> . expression GT expression
    (30) condition_factor -> . expression GE expression
    (31) condition_factor -> . expression NE expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    condition                      shift and go to state 45
    condition_term                 shift and go to state 46
    condition_factor               shift and go to state 47
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 35

    (19) function -> SUM LPAREN ID RPAREN .

    FROM            reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    COMMA           reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    TIMES           reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    DIVIDE          reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    EQ              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    LT              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    LE              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    GT              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    GE              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    NE              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    PLUS            reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    MINUS           reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    RPAREN          reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    AND             reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    OR              reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)
    SEMI            reduce using rule 19 (function -> SUM LPAREN ID RPAREN .)


state 36

    (20) function -> COUNT LPAREN ID RPAREN .

    FROM            reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    COMMA           reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    TIMES           reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    DIVIDE          reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    EQ              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    LT              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    LE              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    GT              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    GE              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    NE              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    PLUS            reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    MINUS           reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    RPAREN          reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    AND             reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    OR              reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)
    SEMI            reduce using rule 20 (function -> COUNT LPAREN ID RPAREN .)


state 37

    (21) function -> MIN LPAREN ID RPAREN .

    FROM            reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    COMMA           reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    TIMES           reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    DIVIDE          reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    EQ              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    LT              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    LE              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    GT              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    GE              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    NE              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    PLUS            reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    MINUS           reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    RPAREN          reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    AND             reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    OR              reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)
    SEMI            reduce using rule 21 (function -> MIN LPAREN ID RPAREN .)


state 38

    (9) column_definition -> ID data_type .

    RPAREN          reduce using rule 9 (column_definition -> ID data_type .)
    COMMA           reduce using rule 9 (column_definition -> ID data_type .)


state 39

    (10) data_type -> INT .

    RPAREN          reduce using rule 10 (data_type -> INT .)
    COMMA           reduce using rule 10 (data_type -> INT .)


state 40

    (11) data_type -> CHAR .

    RPAREN          reduce using rule 11 (data_type -> CHAR .)
    COMMA           reduce using rule 11 (data_type -> CHAR .)


state 41

    (12) data_type -> DECIMAL .

    RPAREN          reduce using rule 12 (data_type -> DECIMAL .)
    COMMA           reduce using rule 12 (data_type -> DECIMAL .)


state 42

    (6) create_statement -> CREATE TABLE ID LPAREN column_definitions RPAREN .

    SEMI            reduce using rule 6 (create_statement -> CREATE TABLE ID LPAREN column_definitions RPAREN .)


state 43

    (8) column_definitions -> column_definitions COMMA . column_definition
    (9) column_definition -> . ID data_type

    ID              shift and go to state 31

    column_definition              shift and go to state 54

state 44

    (38) factor -> ID .

    TIMES           reduce using rule 38 (factor -> ID .)
    DIVIDE          reduce using rule 38 (factor -> ID .)
    EQ              reduce using rule 38 (factor -> ID .)
    LT              reduce using rule 38 (factor -> ID .)
    LE              reduce using rule 38 (factor -> ID .)
    GT              reduce using rule 38 (factor -> ID .)
    GE              reduce using rule 38 (factor -> ID .)
    NE              reduce using rule 38 (factor -> ID .)
    PLUS            reduce using rule 38 (factor -> ID .)
    MINUS           reduce using rule 38 (factor -> ID .)
    RPAREN          reduce using rule 38 (factor -> ID .)
    AND             reduce using rule 38 (factor -> ID .)
    OR              reduce using rule 38 (factor -> ID .)
    SEMI            reduce using rule 38 (factor -> ID .)


state 45

    (14) select_statement -> SELECT select_list FROM ID HAVING condition .
    (23) condition -> condition . OR condition_term

    SEMI            reduce using rule 14 (select_statement -> SELECT select_list FROM ID HAVING condition .)
    OR              shift and go to state 55


state 46

    (22) condition -> condition_term .
    (25) condition_term -> condition_term . AND condition_factor

    OR              reduce using rule 22 (condition -> condition_term .)
    SEMI            reduce using rule 22 (condition -> condition_term .)
    AND             shift and go to state 56


state 47

    (24) condition_term -> condition_factor .

    AND             reduce using rule 24 (condition_term -> condition_factor .)
    OR              reduce using rule 24 (condition_term -> condition_factor .)
    SEMI            reduce using rule 24 (condition_term -> condition_factor .)


state 48

    (26) condition_factor -> expression . EQ expression
    (27) condition_factor -> expression . LT expression
    (28) condition_factor -> expression . LE expression
    (29) condition_factor -> expression . GT expression
    (30) condition_factor -> expression . GE expression
    (31) condition_factor -> expression . NE expression
    (33) expression -> expression . PLUS term
    (34) expression -> expression . MINUS term

    EQ              shift and go to state 57
    LT              shift and go to state 58
    LE              shift and go to state 59
    GT              shift and go to state 60
    GE              shift and go to state 61
    NE              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64


state 49

    (32) expression -> term .
    (36) term -> term . TIMES factor
    (37) term -> term . DIVIDE factor

    EQ              reduce using rule 32 (expression -> term .)
    LT              reduce using rule 32 (expression -> term .)
    LE              reduce using rule 32 (expression -> term .)
    GT              reduce using rule 32 (expression -> term .)
    GE              reduce using rule 32 (expression -> term .)
    NE              reduce using rule 32 (expression -> term .)
    PLUS            reduce using rule 32 (expression -> term .)
    MINUS           reduce using rule 32 (expression -> term .)
    RPAREN          reduce using rule 32 (expression -> term .)
    AND             reduce using rule 32 (expression -> term .)
    OR              reduce using rule 32 (expression -> term .)
    SEMI            reduce using rule 32 (expression -> term .)
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 50

    (35) term -> factor .

    TIMES           reduce using rule 35 (term -> factor .)
    DIVIDE          reduce using rule 35 (term -> factor .)
    EQ              reduce using rule 35 (term -> factor .)
    LT              reduce using rule 35 (term -> factor .)
    LE              reduce using rule 35 (term -> factor .)
    GT              reduce using rule 35 (term -> factor .)
    GE              reduce using rule 35 (term -> factor .)
    NE              reduce using rule 35 (term -> factor .)
    PLUS            reduce using rule 35 (term -> factor .)
    MINUS           reduce using rule 35 (term -> factor .)
    RPAREN          reduce using rule 35 (term -> factor .)
    AND             reduce using rule 35 (term -> factor .)
    OR              reduce using rule 35 (term -> factor .)
    SEMI            reduce using rule 35 (term -> factor .)


state 51

    (39) factor -> NUMBER .

    TIMES           reduce using rule 39 (factor -> NUMBER .)
    DIVIDE          reduce using rule 39 (factor -> NUMBER .)
    EQ              reduce using rule 39 (factor -> NUMBER .)
    LT              reduce using rule 39 (factor -> NUMBER .)
    LE              reduce using rule 39 (factor -> NUMBER .)
    GT              reduce using rule 39 (factor -> NUMBER .)
    GE              reduce using rule 39 (factor -> NUMBER .)
    NE              reduce using rule 39 (factor -> NUMBER .)
    PLUS            reduce using rule 39 (factor -> NUMBER .)
    MINUS           reduce using rule 39 (factor -> NUMBER .)
    RPAREN          reduce using rule 39 (factor -> NUMBER .)
    AND             reduce using rule 39 (factor -> NUMBER .)
    OR              reduce using rule 39 (factor -> NUMBER .)
    SEMI            reduce using rule 39 (factor -> NUMBER .)


state 52

    (40) factor -> function .

    TIMES           reduce using rule 40 (factor -> function .)
    DIVIDE          reduce using rule 40 (factor -> function .)
    EQ              reduce using rule 40 (factor -> function .)
    LT              reduce using rule 40 (factor -> function .)
    LE              reduce using rule 40 (factor -> function .)
    GT              reduce using rule 40 (factor -> function .)
    GE              reduce using rule 40 (factor -> function .)
    NE              reduce using rule 40 (factor -> function .)
    PLUS            reduce using rule 40 (factor -> function .)
    MINUS           reduce using rule 40 (factor -> function .)
    RPAREN          reduce using rule 40 (factor -> function .)
    AND             reduce using rule 40 (factor -> function .)
    OR              reduce using rule 40 (factor -> function .)
    SEMI            reduce using rule 40 (factor -> function .)


state 53

    (41) factor -> LPAREN . expression RPAREN
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 67
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 54

    (8) column_definitions -> column_definitions COMMA column_definition .

    RPAREN          reduce using rule 8 (column_definitions -> column_definitions COMMA column_definition .)
    COMMA           reduce using rule 8 (column_definitions -> column_definitions COMMA column_definition .)


state 55

    (23) condition -> condition OR . condition_term
    (24) condition_term -> . condition_factor
    (25) condition_term -> . condition_term AND condition_factor
    (26) condition_factor -> . expression EQ expression
    (27) condition_factor -> . expression LT expression
    (28) condition_factor -> . expression LE expression
    (29) condition_factor -> . expression GT expression
    (30) condition_factor -> . expression GE expression
    (31) condition_factor -> . expression NE expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    condition_term                 shift and go to state 68
    condition_factor               shift and go to state 47
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 56

    (25) condition_term -> condition_term AND . condition_factor
    (26) condition_factor -> . expression EQ expression
    (27) condition_factor -> . expression LT expression
    (28) condition_factor -> . expression LE expression
    (29) condition_factor -> . expression GT expression
    (30) condition_factor -> . expression GE expression
    (31) condition_factor -> . expression NE expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    condition_factor               shift and go to state 69
    expression                     shift and go to state 48
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 57

    (26) condition_factor -> expression EQ . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 70
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 58

    (27) condition_factor -> expression LT . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 71
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 59

    (28) condition_factor -> expression LE . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 72
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 60

    (29) condition_factor -> expression GT . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 73
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 61

    (30) condition_factor -> expression GE . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 74
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 62

    (31) condition_factor -> expression NE . expression
    (32) expression -> . term
    (33) expression -> . expression PLUS term
    (34) expression -> . expression MINUS term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    expression                     shift and go to state 75
    term                           shift and go to state 49
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 63

    (33) expression -> expression PLUS . term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    term                           shift and go to state 76
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 64

    (34) expression -> expression MINUS . term
    (35) term -> . factor
    (36) term -> . term TIMES factor
    (37) term -> . term DIVIDE factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    term                           shift and go to state 77
    factor                         shift and go to state 50
    function                       shift and go to state 52

state 65

    (36) term -> term TIMES . factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN

    ID              shift and go to state 44
    NUMBER          shift and go to state 51
    LPAREN          shift and go to state 53
    SUM             shift and go to state 15
    COUNT           shift and go to state 16
    MIN             shift and go to state 17

    factor                         shift and go to state 78
    function                       shift and go to state 52

state 66

    (37) term -> term DIVIDE . factor
    (38) factor -> . ID
    (39) factor -> . NUMBER
    (40) factor -> . function
    (41) factor -> . LPAREN expression RPAREN
    (19) function -> . SUM LPAREN ID RPAREN
    (20) function -> . COUNT LPAREN ID RPAREN
    (21) function -> . MIN LPAREN ID RPAREN
